@@ -8,6 +8,10 @@ the rules for this file:
   * keep the format consistent (79 char width, M/D/Y date format).
 
 ------------------------------------------------------------------------------
+01/23/11 Daniel K. O.
+        * Applied patch from Daniel Fiser, add libccd collider for
+          box-cylinder.
+
 01/20/11 Daniel K. O.
         * Applied patch from Daniel Fiser, fix infinite loop in libccd caused
           by numerical problems.
